# llm-rag-project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: chunking.yaml  retrieval.yaml  sources.yaml
data/chunks/: test_doc.jsonl
data/processed/: test_doc.txt
data/raw/: test_doc.txt
doc/: week1_summary.md
src/chunking/: chunk.py  run_chunking.py
src/ingestion/: clean_text.py  ingest.py  load_html.py  load_pdf.py
tests/: test_chunking.py
